--- a/project7.html
+++ b/project7.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Lisa Voronov | Lisa Voronov</title>
     <style>
+        /* ... (шрифты оставляем без изменений) ... */
         @font-face {
             font-family: 'Notbad Sans';
             src: url('Notbad-sans-Regular.woff2') format('woff2');
@@ -73,14 +74,12 @@
         .left-footer {
             display: flex;
             flex-direction: column;
-            /* Установлен gap 15px */
             gap: 15px; 
         }
 
         .nav-arrows {
             display: flex;
             justify-content: space-between;
-            /* Убран margin для чистого gap */
             margin-bottom: 0; 
         }
 
@@ -120,6 +119,9 @@
             height: 80vh;
             object-fit: contain;
             display: block;
+            /* Плавная смена прозрачности */
+            transition: opacity 0.4s ease-in-out;
+            will-change: opacity;
         }
     </style>
 </head>
@@ -165,15 +167,34 @@
             'work52.png',
         ];
 
+        // ПРЕДЗАГРУЗКА: сохраняем картинки в памяти браузера
+        const preloadStore = images.map(src => {
+            const img = new Image();
+            img.src = src;
+            return img;
+        });
+
         let currentIndex = 0;
         const dynamicImg = document.getElementById('dynamic-work');
 
         function changeImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            dynamicImg.src = images[currentIndex];
+            // 1. Начинаем исчезновение
+            dynamicImg.style.opacity = 0;
+
+            setTimeout(() => {
+                // 2. Меняем источник, когда картинка стала прозрачной
+                currentIndex = (currentIndex + 1) % images.length;
+                dynamicImg.src = images[currentIndex];
+
+                // 3. Проявляем только после того, как браузер подтвердил загрузку файла
+                dynamicImg.onload = () => {
+                    dynamicImg.style.opacity = 1;
+                };
+            }, 400); // время завязано на CSS transition
         }
 
-        setInterval(changeImage, 1000);
+        // Запускаем цикл смены раз в 2 секунды (чтобы глаз успел считать фото)
+        setInterval(changeImage, 2000);
     </script>
 
 </body>
