--- a/project3.html
+++ b/project3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>TRENDYOL | Lisa Voronov</title>
     <style>
+        /* ... (шрифты и базовые стили остаются те же) ... */
         @font-face {
             font-family: 'Notbad Sans';
             src: url('Notbad-sans-Regular.woff2') format('woff2');
@@ -44,9 +45,7 @@
             z-index: 10;
         }
 
-        .back-link, .description, .nav-arrows, .footer-bottom {
-            font-size: 15px;
-        }
+        .back-link, .description, .nav-arrows, .footer-bottom { font-size: 15px; }
 
         .back-link {
             text-decoration: none;
@@ -65,42 +64,17 @@
             text-align-last: left;
         }
 
-        .brand-name {
-            font-family: 'Notbad Sans Bold', sans-serif;
-            font-weight: bold;
-        }
+        .brand-name { font-family: 'Notbad Sans Bold', sans-serif; font-weight: bold; }
 
-        .left-footer {
-            display: flex;
-            flex-direction: column;
-            gap: 15px; 
-        }
+        .left-footer { display: flex; flex-direction: column; gap: 15px; }
 
-        .nav-arrows {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 0; 
-        }
+        .nav-arrows { display: flex; justify-content: space-between; }
 
-        .nav-arrows a {
-            text-decoration: none;
-            color: #0D0D0D;
-            transition: opacity 0.3s;
-        }
-
+        .nav-arrows a { text-decoration: none; color: #0D0D0D; transition: opacity 0.3s; }
         .nav-arrows a:hover { opacity: 0.5; }
 
-        .footer-bottom {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            line-height: 1;
-        }
-
-        .footer-bottom a {
-            color: #0D0D0D;
-            text-decoration: none;
-        }
+        .footer-bottom { display: flex; justify-content: space-between; align-items: center; line-height: 1; }
+        .footer-bottom a { color: #0D0D0D; text-decoration: none; }
 
         .right-side {
             width: 50%;
@@ -118,8 +92,7 @@
             height: 80vh;
             object-fit: contain;
             display: block;
-            /* Плавный переход для избавления от мерцания */
-            transition: opacity 0.3s ease-in-out;
+            /* УБРАЛИ transition: здесь больше нет анимации, только мгновенная смена */
         }
     </style>
 </head>
@@ -162,33 +135,26 @@
             'work31.png'
         ];
 
-        // 1. Предзагрузка всех изображений в кэш браузера
-        const preloadedImages = [];
+        // 1. Предзагружаем картинки, чтобы они уже были в памяти
+        const cache = [];
         images.forEach((src) => {
             const img = new Image();
             img.src = src;
-            preloadedImages.push(img);
+            cache.push(img);
         });
 
         let currentIndex = 0;
         const dynamicImg = document.getElementById('dynamic-work');
 
-        // 2. Функция смены с легким эффектом исчезновения
+        // 2. Мгновенная смена без задержек
         function changeImage() {
-            dynamicImg.style.opacity = 0; // Сначала скрываем
-            
-            setTimeout(() => {
-                currentIndex = (currentIndex + 1) % images.length;
-                dynamicImg.src = images[currentIndex];
-                
-                // Когда картинка загружена из кэша, проявляем ее
-                dynamicImg.onload = () => {
-                    dynamicImg.style.opacity = 1;
-                };
-            }, 300); // Время должно совпадать с CSS transition
+            currentIndex = (currentIndex + 1) % images.length;
+            // Теперь это происходит мгновенно, так как файл уже в кэше
+            dynamicImg.src = images[currentIndex];
         }
 
-        setInterval(changeImage, 1500); // Увеличил интервал до 1.5 сек для комфортного чтения
+        // Интервал 1 секунда, как ты и просила
+        setInterval(changeImage, 1000);
     </script>
 
 </body>
