--- a/project2.html
+++ b/project2.html
@@ -114,19 +114,24 @@
             width: 100%;
             display: block;
             margin-bottom: 20px;
-            /* Оптимизация для плавного скролла */
-            will-change: transform;
-            /* Мягкое появление */
-            animation: fadeIn 0.6s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
         }
 
         .content-side img:last-child {
             margin-bottom: 0;
+        }
+
+        @media (max-width: 768px) {
+            .info-side {
+                width: 100%;
+                height: auto;
+                position: relative;
+                padding: 40px 20px;
+            }
+            .content-side {
+                width: 100%;
+                margin-left: 0;
+                padding: 20px;
+            }
         }
     </style>
 </head>
@@ -134,7 +139,7 @@
 
     <div class="info-side">
         <div>
-            <a href="index.html" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=2" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">ILES FORMULA</span> is a luxury professional hair care brand founded by stylist Wendy Iles. 
                 <br><br>As part of our collaboration, I developed print and digital materials for the brand: catalog design, postcards, 
@@ -159,7 +164,7 @@
     </div>
 
     <div class="content-side">
-        <img src="work22.png" loading="eager" decoding="async">
+        <img src="work22.png" loading="eager" decoding="sync">
         <img src="work23.png" loading="lazy" decoding="async">
         <img src="work24.png" loading="lazy" decoding="async">
         <img src="work25.png" loading="lazy" decoding="async">
