--- a/project3.html
+++ b/project3.html
@@ -94,13 +94,32 @@
             display: block;
             /* УБРАЛИ transition: здесь больше нет анимации, только мгновенная смена */
         }
+
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+                height: auto;
+                overflow-y: auto;
+            }
+            .info-side {
+                width: 100%;
+                height: auto;
+                position: relative;
+                padding: 40px 20px;
+            }
+            .right-side {
+                width: 100%;
+                height: 60vh;
+                margin-left: 0;
+            }
+        }
     </style>
 </head>
 <body>
 
     <div class="info-side">
         <div>
-            <a href="index.html" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=3" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">TRENDYOL</span> is a leading Turkish e-commerce platform. 
                 <br><br>
