--- a/project5.html
+++ b/project5.html
@@ -113,7 +113,7 @@
             scrollbar-width: none; 
             -ms-overflow-style: none; 
             /* Плавность скролла на тачпадах */
-            scroll-behavior: smooth;
+            scroll-behavior: auto;
         }
         .scroll-wrapper::-webkit-scrollbar { display: none; }
 
@@ -145,13 +145,35 @@
         .content-side img:last-child {
             margin-right: 0;
         }
+
+        @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+                height: auto;
+                overflow-y: auto;
+            }
+            .info-side {
+                width: 100%;
+                height: auto;
+                position: relative;
+                padding: 40px 20px;
+            }
+            .scroll-wrapper {
+                width: 100%;
+                margin-left: 0;
+                height: 60vh;
+            }
+            .content-side img {
+                height: 50vh;
+            }
+        }
     </style>
 </head>
 <body>
 
     <div class="info-side">
         <div>
-            <a href="index.html" class="back-link">← Back to portfolio</a>
+            <a href="index.html?p=5" class="back-link">← Back to portfolio</a>
             <div class="description">
                 <span class="brand-name">SPEEXX</span> is an international platform for corporate training and language development. As part of this collaboration, I developed infographics with LinkedIn, design, collaborating with AI tools to visualize data and the creative process.
                 <br><br>
