--- a/project2.html
+++ b/project2.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ILES FORMULA | Lisa Voronov</title>
     <style>
         @font-face {
@@ -121,6 +122,9 @@
         }
 
         @media (max-width: 768px) {
+            body {
+                flex-direction: column;
+            }
             .info-side {
                 width: 100%;
                 height: auto;
