--- a/project5.html
+++ b/project5.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPEEXX | Lisa Voronov</title>
     <style>
         @font-face {
