--- a/project7.html
+++ b/project7.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lisa Voronov | Lisa Voronov</title>
     <style>
         /* ... (шрифты оставляем без изменений) ... */
