--- a/project3.html
+++ b/project3.html
@@ -96,6 +96,8 @@
             /* УБРАЛИ transition: здесь больше нет анимации, только мгновенная смена */
         }
 
+        .mobile-gallery { display: none; }
+
         @media (max-width: 768px) {
             body {
                 flex-direction: column;
@@ -109,9 +111,20 @@
                 padding: 40px 20px;
             }
             .right-side {
+                display: none;
+            }
+            .mobile-gallery {
+                display: flex;
+                flex-direction: column;
                 width: 100%;
-                height: 60vh;
-                margin-left: 0;
+                padding: 20px;
+                box-sizing: border-box;
+            }
+            .mobile-gallery img {
+                width: 100%;
+                height: auto;
+                margin-bottom: 20px;
+                display: block;
             }
         }
     </style>
@@ -143,6 +156,15 @@
         
     <div class="right-side">
         <img id="dynamic-work" src="work26.png">
+    </div>
+
+    <div class="mobile-gallery">
+        <img src="work26.png" loading="lazy">
+        <img src="work27.png" loading="lazy">
+        <img src="work28.png" loading="lazy">
+        <img src="work29.png" loading="lazy">
+        <img src="work30.png" loading="lazy">
+        <img src="work31.png" loading="lazy">
     </div>
 
     <script>
