--- a/project7.html
+++ b/project7.html
@@ -122,6 +122,8 @@
             display: block;
         }
 
+        .mobile-gallery { display: none; }
+
         @media (max-width: 768px) {
             body {
                 flex-direction: column;
@@ -135,9 +137,20 @@
                 padding: 40px 20px;
             }
             .right-side {
+                display: none;
+            }
+            .mobile-gallery {
+                display: flex;
+                flex-direction: column;
                 width: 100%;
-                height: 60vh;
-                margin-left: 0;
+                padding: 20px;
+                box-sizing: border-box;
+            }
+            .mobile-gallery img {
+                width: 100%;
+                height: auto;
+                margin-bottom: 20px;
+                display: block;
             }
         }
     </style>
@@ -174,6 +187,13 @@
         
     <div class="right-side">
         <img id="dynamic-work" src="work49.png">
+    </div>
+
+    <div class="mobile-gallery">
+        <img src="work49.png" loading="lazy">
+        <img src="work50.png" loading="lazy">
+        <img src="work51.png" loading="lazy">
+        <img src="work52.png" loading="lazy">
     </div>
 
     <script>
