--- a/project5.html
+++ b/project5.html
@@ -146,6 +146,7 @@
         .content-side img:last-child {
             margin-right: 0;
         }
+        .mobile-footer { display: none; }
 
         @media (max-width: 768px) {
             body {
@@ -178,6 +179,23 @@
                 margin-right: 0;
                 margin-bottom: 10px;
             }
+            .info-side .footer-bottom {
+                display: none;
+            }
+            .mobile-footer {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 20px;
+                font-size: 15px;
+                width: 100%;
+                box-sizing: border-box;
+            }
+            .mobile-footer a {
+                color: #0D0D0D;
+                text-decoration: none;
+            }
+            .description { text-align: left; }
         }
     </style>
 </head>
@@ -216,6 +234,11 @@
             <img src="work43.png" loading="lazy" decoding="async">
             <img src="work44.png" loading="lazy" decoding="async">
         </div>
+    </div>
+
+    <div class="mobile-footer">
+        <a href="mailto:zumkult@gmail.com">zumkult@gmail.com</a>
+        <div class="copyright">© 2026 Lisa Voronov</div>
     </div>
 
     <script>
