--- a/project1.html
+++ b/project1.html
@@ -131,6 +131,7 @@
             margin-bottom: 0;
         }
         .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
 
         @media (max-width: 768px) {
             body {
@@ -149,6 +150,13 @@
             }
             .info-side .footer-bottom {
                 display: none;
+            }
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
             }
             .mobile-footer {
                 display: flex;
@@ -201,6 +209,11 @@
         <img src="work19.png" loading="lazy" decoding="async">
         <img src="work20.png" loading="lazy" decoding="async">
         <img src="work21.png" loading="lazy" decoding="async">
+    </div>
+
+    <div class="nav-arrows mobile-nav">
+        <a href="project7.html">‹ Previous</a>
+        <a href="project2.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
