--- a/project2.html
+++ b/project2.html
@@ -121,6 +121,7 @@
             margin-bottom: 0;
         }
         .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
 
         @media (max-width: 768px) {
             body {
@@ -139,6 +140,13 @@
             }
             .info-side .footer-bottom {
                 display: none;
+            }
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
             }
             .mobile-footer {
                 display: flex;
@@ -190,6 +198,11 @@
         <img src="work23.png" loading="lazy" decoding="async">
         <img src="work24.png" loading="lazy" decoding="async">
         <img src="work25.png" loading="lazy" decoding="async">
+    </div>
+
+    <div class="nav-arrows mobile-nav">
+        <a href="project1.html">‹ Previous</a>
+        <a href="project3.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
