--- a/project3.html
+++ b/project3.html
@@ -98,6 +98,7 @@
 
         .mobile-gallery { display: none; }
         .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
 
         @media (max-width: 768px) {
             body {
@@ -129,6 +130,13 @@
             }
             .info-side .footer-bottom {
                 display: none;
+            }
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
             }
             .mobile-footer {
                 display: flex;
@@ -183,6 +191,11 @@
         <img src="work29.png" loading="lazy">
         <img src="work30.png" loading="lazy">
         <img src="work31.png" loading="lazy">
+    </div>
+
+    <div class="nav-arrows mobile-nav">
+        <a href="project2.html">‹ Previous</a>
+        <a href="project4.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
