--- a/project4.html
+++ b/project4.html
@@ -124,6 +124,7 @@
 
         .mobile-gallery { display: none; }
         .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
 
         @media (max-width: 768px) {
             body {
@@ -155,6 +156,13 @@
             }
             .info-side .footer-bottom {
                 display: none;
+            }
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
             }
             .mobile-footer {
                 display: flex;
@@ -210,6 +218,11 @@
         <img src="work35.png" loading="lazy">
         <img src="work36.png" loading="lazy">
         <img src="work37.png" loading="lazy">
+    </div>
+
+    <div class="nav-arrows mobile-nav">
+        <a href="project3.html">‹ Previous</a>
+        <a href="project5.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
