--- a/project5.html
+++ b/project5.html
@@ -147,6 +147,7 @@
             margin-right: 0;
         }
         .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
 
         @media (max-width: 768px) {
             body {
@@ -181,6 +182,13 @@
             }
             .info-side .footer-bottom {
                 display: none;
+            }
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
             }
             .mobile-footer {
                 display: flex;
@@ -234,6 +242,11 @@
             <img src="work43.png" loading="lazy" decoding="async">
             <img src="work44.png" loading="lazy" decoding="async">
         </div>
+    </div>
+
+    <div class="nav-arrows mobile-nav">
+        <a href="project4.html">‹ Previous</a>
+        <a href="project6.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
