--- a/project6.html
+++ b/project6.html
@@ -130,6 +130,7 @@
             margin-bottom: 0;
         }
         .mobile-footer { display: none; }
+        .mobile-nav { display: none; }
 
         @media (max-width: 768px) {
             body {
@@ -148,6 +149,13 @@
             }
             .info-side .footer-bottom {
                 display: none;
+            }
+            .info-side .nav-arrows {
+                display: none;
+            }
+            .mobile-nav {
+                display: flex;
+                padding: 0 20px;
             }
             .mobile-footer {
                 display: flex;
@@ -195,6 +203,11 @@
         <img src="work46.png" loading="lazy" decoding="async">
         <img src="work47.png" loading="lazy" decoding="async">
         <img src="work48.png" loading="lazy" decoding="async">
+    </div>
+
+    <div class="nav-arrows mobile-nav">
+        <a href="project5.html">‹ Previous</a>
+        <a href="project7.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
