--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </div>
 
     <div class="mobile-view">
-        <img src="work1.1.png">
+        <a href="project7.html"><img src="work1.1.png"></a>
         <a href="project1.html"><img src="work3.png"></a>
         <a href="project2.html"><img src="work5.png"></a>
         <a href="project3.html"><img src="work7.png"></a>
