--- a/project4.html
+++ b/project4.html
@@ -168,7 +168,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                padding: 20px;
+                padding: 20px 20px 50px 20px;
                 font-size: 15px;
                 width: 100%;
                 box-sizing: border-box;
