--- a/project1.html
+++ b/project1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Simplie Hair | Lisa Voronov</title>
     <style>
         @font-face {
