--- a/project7.html
+++ b/project7.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
+    <meta name="googlebot" content="noindex, nofol, noarchive, noimageindex">
+    <meta name="googlebot" content="noindex, nofol, noarchive, noimageindex">
+    <meta name="googlebot" content="noindex, nofollow">
     <title>Lisa Voronov | Lisa Voronov</title>
     <style>
         /* ... (шрифты оставляем без изменений) ... */
