--- a/project3.html
+++ b/project3.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
+    <meta name="googlebot" content="noindex, nofollow">
     <title>TRENDYOL | Lisa Voronov</title>
     <style>
         /* ... (шрифты и базовые стили остаются те же) ... */
