--- a/project6.html
+++ b/project6.html
@@ -189,8 +189,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="project5.html">‹ Previous</a>
-                <a href="project7.html">Next ›</a>
+                <a href="SPEEXX.html">‹ Previous</a>
+                <a href="ME.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -208,8 +208,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="project5.html">‹ Previous</a>
-        <a href="project7.html">Next ›</a>
+        <a href="SPEEXX.html">‹ Previous</a>
+        <a href="ME.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
