--- a/index.html
+++ b/index.html
@@ -130,36 +130,36 @@
     <div class="desktop-view">
         <div id="left" class="column">
             <div class="item"><img src="work1.png" loading="eager" decoding="async"></div>
-            <div class="item"><a href="project1.html"><img src="work3.png" loading="eager" decoding="async"></a></div>
-            <div class="item"><a href="project2.html"><img src="work5.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project3.html"><img src="work7.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project4.html"><img src="work9.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project5.html"><img src="work11.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project6.html"><img src="work13.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project7.html"><img src="work15.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="SIMPLIE.html"><img src="work3.png" loading="eager" decoding="async"></a></div>
+            <div class="item"><a href="ILES FORMULA.html"><img src="work5.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="TRENDYOL.html"><img src="work7.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="KAA.html"><img src="work9.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="SPEEXX.html"><img src="work11.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="BASLER BEAUTY.html"><img src="work13.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="ME.html"><img src="work15.png" loading="lazy" decoding="async"></a></div>
         </div>
 
         <div id="right" class="column">
-            <div class="item"><a href="project7.html"><img src="work16.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project6.html"><img src="work14.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project5.html"><img src="work12.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project4.html"><img src="work10.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project3.html"><img src="work8.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project2.html"><img src="work6.png" loading="lazy" decoding="async"></a></div>
-            <div class="item"><a href="project1.html"><img src="work4.png" loading="eager" decoding="async"></a></div>
+            <div class="item"><a href="ME.html"><img src="work16.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="BASLER BEAUTY.html"><img src="work14.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="SPEEXX.html"><img src="work12.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="KAA.html"><img src="work10.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="TRENDYOL.html"><img src="work8.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="ILES FORMULA.html"><img src="work6.png" loading="lazy" decoding="async"></a></div>
+            <div class="item"><a href="SIMPLIE.html"><img src="work4.png" loading="eager" decoding="async"></a></div>
             <div class="item"><img src="work2.png" loading="eager" decoding="async"></div>
         </div>
     </div>
 
     <div class="mobile-view">
-        <a href="project7.html"><img src="work1.1.png"></a>
-        <a href="project1.html"><img src="work3.png"></a>
-        <a href="project2.html"><img src="work5.png"></a>
-        <a href="project3.html"><img src="work7.png"></a>
-        <a href="project4.html"><img src="work10.png"></a>
-        <a href="project5.html"><img src="work11.png"></a>
-        <a href="project6.html"><img src="work13.png"></a>
-        <a href="project7.html"><img src="work15.png"></a>
+        <a href="ME.html"><img src="work1.1.png"></a>
+        <a href="SIMPLIE.html"><img src="work3.png"></a>
+        <a href="ILES FORMULA.html"><img src="work5.png"></a>
+        <a href="TRENDYOL.html"><img src="work7.png"></a>
+        <a href="KAA.html"><img src="work10.png"></a>
+        <a href="SPEEXX.html"><img src="work11.png"></a>
+        <a href="BASLER BEAUTY.html"><img src="work13.png"></a>
+        <a href="ME.html"><img src="work15.png"></a>
     </div>
 
     <script>
