--- a/project1.html
+++ b/project1.html
@@ -194,8 +194,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="project7.html">‹ Previous</a>
-                <a href="project2.html">Next ›</a>
+                <a href="ME.html">‹ Previous</a>
+                <a href="ILES FORMULA.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -214,8 +214,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="project7.html">‹ Previous</a>
-        <a href="project2.html">Next ›</a>
+        <a href="ME.html">‹ Previous</a>
+        <a href="ILES FORMULA.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
