--- a/project2.html
+++ b/project2.html
@@ -184,8 +184,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="project1.html">‹ Previous</a>
-                <a href="project3.html">Next ›</a>
+                <a href="SIMPLIE.html">‹ Previous</a>
+                <a href="TRENDYOL.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -203,8 +203,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="project1.html">‹ Previous</a>
-        <a href="project3.html">Next ›</a>
+        <a href="SIMPLIE.html">‹ Previous</a>
+        <a href="TRENDYOL.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
