--- a/project3.html
+++ b/project3.html
@@ -171,8 +171,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="project2.html">‹ Previous</a>
-                <a href="project4.html">Next ›</a>
+                <a href="ILES FORMULA.html">‹ Previous</a>
+                <a href="KAA.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -196,8 +196,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="project2.html">‹ Previous</a>
-        <a href="project4.html">Next ›</a>
+        <a href="ILES FORMULA.html">‹ Previous</a>
+        <a href="KAA.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
