--- a/project4.html
+++ b/project4.html
@@ -198,8 +198,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="project3.html">‹ Previous</a>
-                <a href="project5.html">Next ›</a>
+                <a href="TRENDYOL.html">‹ Previous</a>
+                <a href="SPEEXX.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -223,8 +223,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="project3.html">‹ Previous</a>
-        <a href="project5.html">Next ›</a>
+        <a href="TRENDYOL.html">‹ Previous</a>
+        <a href="SPEEXX.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
