--- a/project5.html
+++ b/project5.html
@@ -223,8 +223,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="project4.html">‹ Previous</a>
-                <a href="project6.html">Next ›</a>
+                <a href="KAA.html">‹ Previous</a>
+                <a href="BASLER BEAUTY.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -247,8 +247,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="project4.html">‹ Previous</a>
-        <a href="project6.html">Next ›</a>
+        <a href="KAA.html">‹ Previous</a>
+        <a href="BASLER BEAUTY.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
