--- a/project7.html
+++ b/project7.html
@@ -204,8 +204,8 @@
 
         <div class="left-footer">
             <div class="nav-arrows">
-                <a href="project6.html">‹ Previous</a>
-                <a href="project1.html">Next ›</a>
+                <a href="BASLER BEAUTY.html">‹ Previous</a>
+                <a href="SIMPLIE.html">Next ›</a>
             </div>
 
             <div class="footer-bottom">
@@ -227,8 +227,8 @@
     </div>
 
     <div class="nav-arrows mobile-nav">
-        <a href="project6.html">‹ Previous</a>
-        <a href="project1.html">Next ›</a>
+        <a href="BASLER BEAUTY.html">‹ Previous</a>
+        <a href="SIMPLIE.html">Next ›</a>
     </div>
 
     <div class="mobile-footer">
